--- a/UI/src/desktop/body/test.fxml
+++ b/UI/src/desktop/body/test.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.control.ColorPicker?>
 
-<?import java.lang.String?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import javafx.collections.FXCollections?>
-<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@body.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<?import java.lang.String?>
+<?import javafx.scene.control.Slider?>
+
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@body.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktop.body.BodyController">
     <top>
         <VBox fx:id="mainContainer" alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
@@ -22,52 +18,55 @@
                 </Label>
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
-                        <Button fx:id="loadFileButton" mnemonicParsing="false" onAction="#handleLoadFile" styleClass="load-button" text="Load File" />
-                        <TextField fx:id="filePathField" prefWidth="200.0" editable="false" styleClass="file-path"  HBox.hgrow="ALWAYS"/>
+                        <!-- Corrected tooltip declaration -->
+                        <Button fx:id="loadFileButton" mnemonicParsing="false" styleClass="load-button" text="Load File">
+                            <tooltip>
+                                <Tooltip text="Load a new spreadsheet file"/>
+                            </tooltip>
+                        </Button>
+                        <TextField fx:id="filePathField" prefWidth="200.0" editable="false" styleClass="file-path" HBox.hgrow="ALWAYS" />
                     </children>
                 </HBox>
                 <HBox alignment="TOP_CENTER" spacing="10.0">
                     <children>
                         <TextField fx:id="selectedCellId" editable="false" promptText="Selected Cell ID" />
                         <TextField fx:id="originalCellValue" promptText="Original Cell value" />
-                        <Button fx:id="updateValueButton" mnemonicParsing="false" onAction="#handleUpdateValue" text="Update value" />
+                        <!-- Corrected tooltip declaration -->
+                        <Button fx:id="updateValueButton" mnemonicParsing="false" onAction="#handleUpdateValue" text="Update Value">
+                            <tooltip>
+                                <Tooltip text="Update the selected cell value"/>
+                            </tooltip>
+                        </Button>
                         <TextField fx:id="lastUpdateCellVersion" editable="false" promptText="Last update cell version" />
                         <ChoiceBox fx:id="versionSelector" accessibleHelp="version selection" accessibleText="version selection" prefWidth="150.0" />
                     </children>
                 </HBox>
                 <HBox spacing="10">
                     <children>
-                        <ColorPicker fx:id="backgroundColorPicker" />
-                        <ColorPicker fx:id="textColorPicker" />
-                        <Button fx:id="applyStyleButton" text="Apply Style" onAction="#handleApplyStyle" />
-                        <Button fx:id="resetStyleButton" text="Reset Style" />
-                    </children>
-                </HBox>
-                <!-- New Row Height and Column Width Controls -->
-                <HBox spacing="10">
-                    <children>
-                        <Label text="Row Height:" />
-                        <TextField fx:id="rowHeightField" promptText="Enter height in px" />
-                        <Button fx:id="setRowHeightButton" text="Set Row Height" onAction="#handleSetRowHeight" />
-                        <Label text="Column Width:" />
-                        <TextField fx:id="columnWidthField" promptText="Enter width in px" />
-                        <Button fx:id="setColumnWidthButton" text="Set Column Width" onAction="#handleSetColumnWidth" />
-                    </children>
-                </HBox>
-                <!-- New Alignment Control for Columns -->
-                <HBox spacing="10">
-                    <children>
-                        <Label text="Column Alignment:" />
-                        <ChoiceBox fx:id="alignmentChoiceBox">
-                            <items>
-                                <FXCollections fx:factory="observableArrayList">
-                                    <String fx:value="Left" />
-                                    <String fx:value="Center" />
-                                    <String fx:value="Right" />
-                                </FXCollections>
-                            </items>
-                        </ChoiceBox>
-                        <Button fx:id="applyAlignmentButton" text="Apply Alignment" onAction="#handleApplyAlignment" />
+                        <!-- Corrected tooltip declaration -->
+                        <ColorPicker fx:id="backgroundColorPicker">
+                            <tooltip>
+                                <Tooltip text="Select background color"/>
+                            </tooltip>
+                        </ColorPicker>
+                        <!-- Corrected tooltip declaration -->
+                        <ColorPicker fx:id="textColorPicker">
+                            <tooltip>
+                                <Tooltip text="Select text color"/>
+                            </tooltip>
+                        </ColorPicker>
+                        <!-- Corrected tooltip declaration -->
+                        <Button fx:id="applyStyleButton" text="Apply Style" onAction="#handleApplyStyle">
+                            <tooltip>
+                                <Tooltip text="Apply selected style to the cell"/>
+                            </tooltip>
+                        </Button>
+                        <!-- Corrected tooltip declaration -->
+                        <Button fx:id="resetStyleButton" text="Reset Style" onAction="#handleResetStyle">
+                            <tooltip>
+                                <Tooltip text="Reset cell style to default"/>
+                            </tooltip>
+                        </Button>
                     </children>
                 </HBox>
             </children>
@@ -80,22 +79,80 @@
 
     <left>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
+            <!-- Table Commands Section -->
+            <TitledPane text="Table Commands" expanded="false"> <!-- Set expanded to false -->
                 <VBox fx:id="commandsSection" spacing="5.0" styleClass="section-container">
                     <children>
-                        <Button fx:id="sortButton" text="Sort" onAction="#handleSort" />
-                        <Button fx:id="filterButton" mnemonicParsing="false" onAction="#handleFilter" text="Filter" />
+                        <Button fx:id="sortButton" text="Sort" onAction="#handleSort">
+                            <tooltip>
+                                <Tooltip text="Sort the table data"/>
+                            </tooltip>
+                        </Button>
+                        <Button fx:id="filterButton" mnemonicParsing="false" onAction="#handleFilter" text="Filter">
+                            <tooltip>
+                                <Tooltip text="Filter table data"/>
+                            </tooltip>
+                        </Button>
                     </children>
                 </VBox>
+            </TitledPane>
+
+            <!-- Table Settings Section -->
+            <TitledPane text="Table Settings" expanded="false"> <!-- Set expanded to false -->
+                <VBox fx:id="tableSettingsSection" spacing="5.0" styleClass="section-container">
+                    <children>
+                        <HBox spacing="5">
+                            <Label text="Adjust Row Height:" />
+                            <Slider fx:id="rowHeightSlider" min="20" max="100" value="30">
+                                <tooltip>
+                                    <Tooltip text="Adjust the height of table rows"/>
+                                </tooltip>
+                            </Slider>
+                            <Label fx:id="rowHeightLabel" text="30" />
+                        </HBox>
+                        <HBox spacing="5">
+                            <Label text="Column Alignment:" />
+                            <ChoiceBox fx:id="alignmentChoiceBox">
+                                <items>
+                                    <FXCollections fx:factory="observableArrayList">
+                                        <String fx:value="Left" />
+                                        <String fx:value="Center" />
+                                        <String fx:value="Right" />
+                                    </FXCollections>
+                                </items>
+                            </ChoiceBox>
+                            <Button fx:id="applyAlignmentButton" text="Apply Alignment" onAction="#handleApplyAlignment">
+                                <tooltip>
+                                    <Tooltip text="Apply selected alignment to columns"/>
+                                </tooltip>
+                            </Button>
+                        </HBox>
+                    </children>
+                </VBox>
+            </TitledPane>
+
+            <!-- Range Actions Section -->
+            <TitledPane text="Range Actions" expanded="false"> <!-- Set expanded to false -->
                 <VBox fx:id="rangesSection" spacing="5.0" styleClass="section-container">
                     <children>
-                        <Button fx:id="addRangeButton" mnemonicParsing="false" onAction="#handleAddRange" text="Add Range" />
-                        <Button fx:id="deleteRangeButton" mnemonicParsing="false" onAction="#handleDeleteRange" text="Delete Range" />
-                        <Button fx:id="ViewRanges" mnemonicParsing="false" text="ViewRanges" />
+                        <Button fx:id="addRangeButton" mnemonicParsing="false" onAction="#handleAddRange" text="Add Range">
+                            <tooltip>
+                                <Tooltip text="Add a new range"/>
+                            </tooltip>
+                        </Button>
+                        <Button fx:id="deleteRangeButton" mnemonicParsing="false" onAction="#handleDeleteRange" text="Delete Range">
+                            <tooltip>
+                                <Tooltip text="Delete the selected range"/>
+                            </tooltip>
+                        </Button>
+                        <Button fx:id="ViewRanges" mnemonicParsing="false" text="View Ranges">
+                            <tooltip>
+                                <Tooltip text="View all defined ranges"/>
+                            </tooltip>
+                        </Button>
                     </children>
                 </VBox>
-            </children>
+            </TitledPane>
         </VBox>
     </left>
-
 </BorderPane>
