--- a/UI/src/desktop/sheet/sheet.fxml
+++ b/UI/src/desktop/sheet/sheet.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.VBox?>
 
 <ScrollPane fx:id="gridScrollPane" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktop.sheet.SheetController">
    <content>
-      <TableView fx:id="spreadsheetTableView" editable="true" />
+      <VBox>
+         <TableView fx:id="spreadsheetTableView" editable="true" VBox.vgrow="ALWAYS" />
+      </VBox>
    </content>
 </ScrollPane>
